refactor(proposal): unify filters under suggest
